--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
    },
    "scripts": {
       "start": "node build/index.js",
-      "build": "tsc",
+      "build": "tsc --watch",
       "dev": "npx nodemon --exec ts-node src/index.ts",
       "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
    }
